--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -7,3 +7,4 @@
 <% if admin_signed_in? %>
 <%= link_to "ログアウト",destroy_admin_session_path,method: :delete %>
 <% end %>
+<%= link_to "お店登録", new_shop_path %>
