--- a/app/views/user/shops/new.html.erb
+++ b/app/views/user/shops/new.html.erb
@@ -1,32 +1,52 @@
 <h3>お店登録</h3>
-<%= form_with(model: @shop, url: shops_path, local: true) do |f| %>
-<table>
-  <tr>
-<%= f.label :name, "お店の名前" %>
-<%= f.text_field :name %>>
-<%= f.attachment_field :food_image %>
-<%= f.attachment_field :shop_image %>
-<%= f.label :tag_name, "タグ" %>
-<%= f.text_field :tag_name %>
-<%= f.label :description, "お店の説明" %>
-<%= f.text_field :description %>
-<%= f.label :prefectures, "住所(都道府県)" %>
-<%= f.select :prefectures, User.prefectures.keys, {} %>
-<%= f.label :address, "都道府県以降の住所" %>
-<%= f.text_field :address %>
-<%= f.text_field :building_name, placeholder: "建物名などがあればご記入ください" %>
-<%= f.label :minimum_price, "予算〜" %>
-<%= f.number_field :minimum_price %>
-<%= f.label :max_price, "〜円" %>
-<%= f.number_field :max_price %>
-<%= f.label :phone_number, "お店の電話番号(半角数字ハイフンなし)" %>
-<%= f.number_field :phone_number %>
-営業時間
-<%= f.time_select :start_time %>
-<%= f.time_select :end_time %>
-<%= f.text_field :time_description, placeholder: "営業時間の補足説明" %>
-<%= f.hidden_field :user_id, value: current_user.id %>
-<%= f.hidden_field :is_quited, value: 0 %>
-<% f.submit "登録" %>
-</table>
+<%= form_with model: @shop, url: shops_path, local: true do |f| %>
+
+    <table>
+      <tr>
+        <td>お店の名前</td>
+        <td><%= f.text_field :name %></td>
+      </tr>
+
+      <tr>
+        <td>タグ</td>
+        <td><%= f.text_field :tag_name %></td>
+      </tr>
+      <tr>
+        <td>お店の説明</td>
+        <td><%= f.text_area :description %></td>
+      </tr>
+      <tr>
+        <td>住所(都道府県)</td>
+        <td><%= f.select :prefectures, User.prefectures.keys, {} %></td>
+      </tr>
+      <tr>
+        <td>以降の住所(建物名)</td>
+        <td>
+          <%= f.text_field :address %>　<%= f.text_field :building_name, placeholder: "建物名がある場合ここに記入" %>
+        </td>
+
+      <tr>
+        <td>予算(おおよそ)</td>
+        <td><%= f.number_field :minimum_price %>〜<%= f.number_field :max_price %>円</td>
+      </tr>
+      <tr>
+        <td>お店の電話番号</td>
+        <td><%= f.number_field :phone_number %></td>
+      </tr>
+      <tr>
+        <td>営業時間</td>
+        <td><%= f.time_select :start_time %>〜<%= f.time_select :end_time %></td>
+      </tr>
+      <tr>
+        <td>補足説明</td>
+        <td><%= f.text_area :time_description, placeholder: "営業時間の補足説明" %></td>
+      </tr>
+      <% f.hidden_field :is_quited, value: 0 %>
+      <tr>
+        <td></td>
+        <td><%= f.submit "登録" %></td>
+      </tr>
+    </table>
+
+
 <% end %>
