--- a/app/views/user/shops/new.html.erb
+++ b/app/views/user/shops/new.html.erb
@@ -1,52 +1,60 @@
 <h3>お店登録</h3>
 <%= form_with model: @shop, url: shops_path, local: true do |f| %>
+  <table>
+    <tr>
+      <td>お店の名前</td>
+      <td><%= f.text_field :name %></td>
+    </tr>
+    <tr>
+      <td>タグ</td>
+      <td><%= f.text_field :tag_name %></td>
+    </tr>
+    <tr>
+      <td>お店の説明</td>
+      <td><%= f.text_area :description %></td>
+    </tr>
+    <tr>
+      <td>住所(都道府県)</td>
+      <td><%= f.select :prefectures, User.prefectures.keys, {} %></td>
+    </tr>
+    <tr>
+      <td>以降の住所(建物名)</td>
+      <td>
+        <%= f.text_field :address %>　<%= f.text_field :building_name, placeholder: "建物名がある場合ここに記入" %>
+      </td>
 
-    <table>
+    <tr>
+      <td>予算</td>
+      <td><%= f.number_field :minimum_price %>〜<%= f.number_field :max_price %>円</td>
+    </tr>
+    <tr>
+      <td>お店の電話番号</td>
+      <td><%= f.number_field :phone_number %></td>
+    </tr>
+    <tr>
+      <td>営業時間</td>
+      <td><%= f.time_select :start_time %>〜<%= f.time_select :end_time %></td>
+    </tr>
+    <tr>
+      <td>補足説明</td>
+      <td><%= f.text_area :time_description, placeholder: "営業時間の補足説明" %></td>
+    </tr>
+    <%= f.hidden_field :is_active, :value => 0 %>
+    <%= f.fields_for :images do |m| %>
       <tr>
-        <td>お店の名前</td>
-        <td><%= f.text_field :name %></td>
-      </tr>
-
-      <tr>
-        <td>タグ</td>
-        <td><%= f.text_field :tag_name %></td>
-      </tr>
-      <tr>
-        <td>お店の説明</td>
-        <td><%= f.text_area :description %></td>
-      </tr>
-      <tr>
-        <td>住所(都道府県)</td>
-        <td><%= f.select :prefectures, User.prefectures.keys, {} %></td>
-      </tr>
-      <tr>
-        <td>以降の住所(建物名)</td>
-        <td>
-          <%= f.text_field :address %>　<%= f.text_field :building_name, placeholder: "建物名がある場合ここに記入" %>
-        </td>
-
-      <tr>
-        <td>予算(おおよそ)</td>
-        <td><%= f.number_field :minimum_price %>〜<%= f.number_field :max_price %>円</td>
+        <td>商品画像</td>
+        <td><%= m.attachment_field :food_image %></td>
       </tr>
       <tr>
-        <td>お店の電話番号</td>
-        <td><%= f.number_field :phone_number %></td>
+        <td>店舗画像</td>
+        <td><%= m.attachment_field :shop_image %></td>
       </tr>
-      <tr>
-        <td>営業時間</td>
-        <td><%= f.time_select :start_time %>〜<%= f.time_select :end_time %></td>
-      </tr>
-      <tr>
-        <td>補足説明</td>
-        <td><%= f.text_area :time_description, placeholder: "営業時間の補足説明" %></td>
-      </tr>
-      <% f.hidden_field :is_quited, value: 0 %>
-      <tr>
-        <td></td>
-        <td><%= f.submit "登録" %></td>
-      </tr>
-    </table>
-
+      <%= m.hidden_field :user_id, :value => current_user.id %>
+    <% end %>
+    <tr>
+      <td></td>
+      <td><%= f.submit "登録" %></td>
+    </tr>
+  </table>
 
 <% end %>
