--- a/app/views/user/shops/show.html.erb
+++ b/app/views/user/shops/show.html.erb
@@ -1,1 +1,4 @@
-<h1></h1>
+
+<h4 class="shop-name">店名：<%= @shop.name %></h4>
+<h4 id="address">住所：<%= @shop.prefectures %><%= @shop.address %></h4>
+<%= render "map-show" %>
