--- a/app/views/user/shops/_map-show.html.erb
+++ b/app/views/user/shops/_map-show.html.erb
@@ -1,2 +1,3 @@
 <div id="map" class="map"></div>
 <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap"></script>
+<%= javascript_include_tag 'user/map-show.js' %>
