--- a/app/views/user/shops/show.html.erb
+++ b/app/views/user/shops/show.html.erb
@@ -1,4 +1,4 @@
-
+<%= render "user/reviews/form", review: @review, shop: @shop %>
 <h4 class="shop-name">店名：<%= @shop.name %></h4>
 <h4 id="address">住所：<%= @shop.prefectures %><%= @shop.address %></h4>
-<%= render "map-show" %>
+<%= render "user/shops/map-show" %>
