レイアウト修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,14 @@
   height: 400px;
   width: 600px;
  }
+ body {
+  min-height: 100vh;
+  color: white;
+  background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%);
+  font-family: serif;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
