--- a/app/views/user/reviews/index.html.erb
+++ b/app/views/user/reviews/index.html.erb
@@ -1,36 +1,23 @@
 <div class="container">
-    <div class="card mb-6">
-      <header class="card-header">
-        <p class="card-header-title">
-          <%= @name %>
-        </p>
-      </header>
-      <div class="card-content">
-        <div class="content average-score">
-          <div class="star-rating mb-2">
-            <div class="star-rating-front" style="width: <%= @shop.review_score_percentage %>%">★★★★★</div>
-            <div class="star-rating-back">★★★★★</div>
-          </div>
-          <div class="average-score-display ml-3 pt-2">
-            <%= @shop.avg_score %>点（<%= @shop.reviews.count %>件のレビュー）
-          </div>
-        </div>
-      </div>
-    </div>
-    <table class="table is-fullwidth has-text-centered">
-      <thead>
-        <tr>
-          <th>ユーザー</th><th>点数</th><th>コメント</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @reviews.each do |review| %>
+  <div class="row">
+    <div class="mx-auto">
+      <table class="table">
+        <thead>
           <tr>
-            <td><%= review.user.nickname %></td>
-            <td><%= review.score %></td>
-            <td><%= review.content %></td>
+            <th>ユーザー</th><th></th><th>点数</th><th>コメント</th>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          <% @reviews.each do |review| %>
+            <tr>
+              <td><%= attachment_image_tag(review.user, :icon_image, size: '50x50', fallback: "no-image.png") %></td>
+              <td><%= review.user.nickname %></td>
+              <td><%= review.score %></td>
+              <td><%= review.content %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
+</div>
