--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,33 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
+        <div class="container">
+          <a class="navbar-brand" href="/"><%= image_tag("logo.png", size: '130x90') %></a>
+          <button class="navbar-toggler"type="button" data-toggle="collapse"data-target="#navbarSupportedContent"aria-controls="navbarSupportedContent"aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto">
+              <% if user_signed_in? %>
+                <li class="nav-item mr-5"><%= link_to "My page", user_path(current_user),class:"nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "Shops", shops_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "New shop", new_shop_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "Log out", destroy_user_session_path,method: :delete, class: "nav-link text-white" %></li>
+              <% elsif admin_signed_in? %>
+                <li class="nav-item mr-5"><%= link_to "Shops", admin_root_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "Users", admin_root_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "Log out", admin_root_path ,method: :delete,class:"nav-link text-white" %></li>
+              <% else %>
+                <li class="nav-item mr-5"><%= link_to "About", root_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "Shops", root_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "Sign up", new_user_registration_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "Log in", new_user_session_path, class: "nav-link text-white" %></li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
     <%= yield %>
   </body>
