--- a/app/views/user/shops/index.html.erb
+++ b/app/views/user/shops/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="shop-info mx-auto">
+    <div class="mx-auto">
       <% @shops.each do |shop| %>
-        <%= link_to shop.name, shop_path(shop) %>
         <% shop.images.first(1).each do |image| %>
-          <div class="m-3">
+          <div class="shop-info">
+            <%= link_to shop.name, shop_path(shop) %>
             <%= attachment_image_tag(image, :food_image, size: '200x200') %>
             <%= attachment_image_tag(image, :shop_image, size: '200x200') %>
           </div>
