--- a/app/views/user/reviews/_form.html.erb
+++ b/app/views/user/reviews/_form.html.erb
@@ -30,3 +30,7 @@
 </div>
 
 <%= javascript_include_tag 'user/reviews.js' %>
+
+
+app/views/user/reviews/_form.html.erb
+app/views/user/shops/_map-show.html.erb
