--- a/app/views/user/reviews/_form.html.erb
+++ b/app/views/user/reviews/_form.html.erb
@@ -12,7 +12,7 @@
 <div class="rating-box mt-3">
   <%= form_with model: review, url: shop_reviews_path(shop), local: true do |f| %>
     <div class="main-rating">
-      <div class="ratings mb-3">
+      <div class="ratings mb-3" id="ratings">
         <span class="fa fa-star-o" id="star"></span>
         <span class="fa fa-star-o" id="star"></span>
         <span class="fa fa-star-o" id="star"></span>
@@ -26,7 +26,5 @@
     <%= f.submit "投稿", class: "button mt-3" %>
     <%= link_to "全てのレビュー", shop_reviews_path(shop) %>
   <% end %>
-
 </div>
-
 <%= javascript_include_tag 'user/reviews.js' %>
