--- a/app/views/user/shops/show.html.erb
+++ b/app/views/user/shops/show.html.erb
@@ -16,10 +16,11 @@
       <p>電話番号：<%= @shop.phone_number %></p>
       <p id="address">住所：<%= @shop.prefectures %><%= @shop.address %></p>
       <%= render "user/reviews/form", review: @review, shop: @shop %>
-      
+
     </div>
     <div class="col-sm-12 col-md-4 mt-5">
-      <%= render "user/shops/map-show" %>
+      <div id="map" class="map"></div>
+      <%= javascript_include_tag 'user/map-show.js' %>
     </div>
   </div>
 </div>
