--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,9 +1,14 @@
-
-<%= form_with url: search_path, method: :get, local: true do |f| %>
-  <%= f.text_field :location, :size=>"50", placeholder: "住所や場所名を入力してください。(例：東京タワー)" %>
-  から半径<%= f.select :distance, *[1..30] %>km以内
-  優先順位：<%= f.select :sort, ["評価が良い", "価格が安い"] %>を優先
-  <%= f.submit '検索' %>
-<% end %>
-<button id="get_current_shop" type="button" class="button">現在地取得</button>
-<%= javascript_include_tag 'user/searches.js' %>
+<div class="container">
+  <div class="row">
+    <div class="col-12 mt-5">
+      <%= form_with url: search_path, method: :get, local: true do |f| %>
+        <%= f.text_field :location, :size=>"50", placeholder: "住所や場所名を入力してください。(例：東京タワー)" %>
+        から半径<%= f.select :distance, *[1..30] %>km以内
+        優先順位：<%= f.select :sort, ["評価が良い", "価格が安い"] %>を優先
+        <%= f.submit '検索' %>
+      <% end %>
+      <button id="get_current_shop" type="button" class="button">現在地取得</button>
+      <%= javascript_include_tag 'user/searches.js' %>
+    </div>
+  </div>
+</div>
