--- a/app/views/user/shops/show.html.erb
+++ b/app/views/user/shops/show.html.erb
@@ -1,26 +1,61 @@
 <div class='container'>
-  <div class='row'>
-    <div class="mt-5">
-      <p class="shop-name">店舗名：<%= @shop.name %></p>
-      <p>紹介文：<%= @shop.description %></p>
-      <% unless @shop.start_time.nil? || @shop.end_time.nil? %>
-        <p>営業時間：<%= @shop.start_time.strftime("%H:%M") %>~<%= @shop.end_time.strftime("%H:%M") %></p>
-      <% end %>
-      <p>補足説明：<%= @shop.time_description %> </p>
-      <p>タグ一覧：
-        <% @shop.tags.each do |tag| %>
-          <%= tag.tag_name %>
+  <div class='row mx-auto'>
+    <div class="shop-info col-12 mt-5">
+      <div class="description">
+        <div class="detail">
+          <p>店舗名　：</p>
+          <p class="shop-name text"><%= @shop.name %></p>
+        </div>
+        <div class="detail">
+          <p>紹介文　：</p>
+          <p class="text"><%= @shop.description %></p>
+        </div>
+        <div class="detail">
+          <p class="text">
+            <% @shop.tags.each do |tag| %>
+            <%= tag.tag_name %>
+            <% end %>
+          </p>
+        </div>
+        <% unless @shop.start_time.nil? || @shop.end_time.nil? %>
+          <div class="detail">
+            <p>営業時間：</p>
+            <p><%= @shop.start_time.strftime("%H:%M") %>~<%= @shop.end_time.strftime("%H:%M") %></p>
+          </div>
         <% end %>
-      </p>
-      <p>予算：一人あたり<%= @shop.minimum_price %>~<%= @shop.max_price %>円</p>
-      <p>電話番号：<%= @shop.phone_number %></p>
-      <p id="address">住所：<%= @shop.prefectures %><%= @shop.address %></p>
+        <% unless @shop.time_description.nil? || @shop.time_description =="" %>
+          <div class="detail">
+            <p>補足説明：</p>
+            <p class="text"><%= @shop.time_description %></p>
+          </div>
+        <% end %>
+        <div class="detail">
+          <p>予算　　：</p>
+          <p><%= @shop.minimum_price %>~<%= @shop.max_price %>円（一人あたり）</p>
+        </div>
+        <div class="detail">
+          <p>電話番号：</p>
+          <p><%= @shop.phone_number %></p>
+        </div>
+        <div class="detail">
+          <p>住所　　：</p>
+          <p class="text" id="address"><%= @shop.prefectures %><%= @shop.address %></p>
+        </div>
+      </div>
       <%= render "user/reviews/form", review: @review, shop: @shop %>
-
     </div>
-    <div class="col-sm-12 col-md-4 mt-5">
+    <div class="col-12">
+      <% @shop.images.first(1).each do |image| %>
+        <div class="shop-info">
+          <div class="mr-3"><%= attachment_image_tag(image, :food_image, size: '300x300') %></div>
+          <div class="ml-3"><%= attachment_image_tag(image, :shop_image, size: '300x300') %></div>
+        </div>
+      <% end %>
+    </div>
+    <div class="col-12 mt-5 mb-5">
       <div id="map" class="map"></div>
       <%= javascript_include_tag 'user/map-show.js' %>
     </div>
   </div>
 </div>
+
