--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,19 +20,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto">
               <% if user_signed_in? %>
-                <li class="nav-item mr-5"><%= link_to "My page", user_path(current_user),class:"nav-link text-white" %></li>
-                <li class="nav-item mr-5"><%= link_to "Shops", shops_path, class: "nav-link text-white" %></li>
-                <li class="nav-item mr-5"><%= link_to "New shop", new_shop_path, class: "nav-link text-white" %></li>
-                <li class="nav-item mr-5"><%= link_to "Log out", destroy_user_session_path,method: :delete, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "マイページ", user_path(current_user),class:"nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "#{current_user.current_prefectures}のお店", shops_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "新規店舗登録", new_shop_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "ログアウト", destroy_user_session_path,method: :delete, class: "nav-link text-white" %></li>
               <% elsif admin_signed_in? %>
-                <li class="nav-item mr-5"><%= link_to "Shops", admin_root_path, class: "nav-link text-white" %></li>
-                <li class="nav-item mr-5"><%= link_to "Users", admin_root_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "お店管理", admin_root_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "", admin_root_path, class: "nav-link text-white" %></li>
                 <li class="nav-item mr-5"><%= link_to "Log out", admin_root_path ,method: :delete,class:"nav-link text-white" %></li>
               <% else %>
-                <li class="nav-item mr-5"><%= link_to "About", root_path, class: "nav-link text-white" %></li>
-                <li class="nav-item mr-5"><%= link_to "Shops", root_path, class: "nav-link text-white" %></li>
-                <li class="nav-item mr-5"><%= link_to "Sign up", new_user_registration_path, class: "nav-link text-white" %></li>
-                <li class="nav-item mr-5"><%= link_to "Log in", new_user_session_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "検索", root_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "お店", shops_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "新規登録", new_user_registration_path, class: "nav-link text-white" %></li>
+                <li class="nav-item mr-5"><%= link_to "ログイン", new_user_session_path, class: "nav-link text-white" %></li>
               <% end %>
             </ul>
           </div>
