--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,30 +1,34 @@
-  <h2>新規登録</h2>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <table>
-        <tr>
-          <td><%= f.label :current_prefectures, "住まいの都道府県" %></td>
-          <td><%= f.select :current_prefectures, User.prefectures.keys, {} %></td>
-        </tr>
-        <tr>
-          <td><%= f.label :nickname, "ニックネーム"%></td>
-          <td><%= f.text_field :nickname, autofocus: true %></td>
-        <tr>
-          <td><%= f.label :email, "メールアドレス" %></td>
-          <td><%= f.email_field :email, autocomplete: "email" %></td>
-        </tr>
-        <tr>
-          <td><%= f.label :password, "パスワード(#{@minimum_password_length}文字以上)" %></td>
-          <td><%= f.password_field :password, autocomplete: "new-password" %></td>
-        </tr>
-        <tr>
-          <td><%= f.label :password_confirmation, "パスワード(確認用)" %></td>
-          <td><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td><%= f.submit "新規登録" %></td>
-        </tr>
-      </tbody>
-    </table>
-  <% end %>
-  ログインは<%= link_to 'こちら', new_user_session_path %>から行ってください。
+
+  <div class='container'>
+    <div class='row'>
+      <div class="mx-auto mt-5">
+      <h2>新規登録</h2>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <div class="form-group">
+          <%= f.label "お住まいの地域" %>
+          <%= f.select :current_prefectures, User.prefectures.keys, {} %>
+        </div>
+       <div class="form-group">
+          <%= f.label "ニックネーム" %>
+          <%= f.text_field :nickname, autofocus: true, class: "form-control"%>
+        </div>
+        <div class="form-group">
+          <%= f.label "メールアドレス" %>
+          <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label "パスワード(8文字以上)" %>
+          <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label "パスワード(確認用)" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "登録", class: 'btn btn-secondary' %>
+        </div>
+      <% end %>
+      ログインは<%= link_to "こちら", new_user_session_path %>から行なってください
+    </div>
+  </div>
+</div>
