--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,8 @@
  *
  *= require_tree .
  *= require_self
+ *= require select2
+ *= require select2-bootstrap
  */
 
  // 地図
@@ -137,9 +139,4 @@
   position: absolute;
   right: 1rem;
   top: 1rem;
-}
-
-// お気に入り
-.favorite {
- size: 30px;
 }
