--- a/app/views/user/favorites/_favorite.html.erb
+++ b/app/views/user/favorites/_favorite.html.erb
@@ -1,4 +1,4 @@
-<div class="favorite">
+<div class="ml-3">
   <% if user_signed_in? && shop.is_favorited_by?(current_user) %>
     <%= link_to shop_favorites_path(shop), method: :delete, remote: true do %>
       ♥<%= shop.favorites.count %>
