--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,13 +1,18 @@
 <div class="container">
   <div class="row">
-    <div class="col-12 mt-5">
+    <div class="col-8 mt-5 mx-auto">
       <%= form_with url: search_path, method: :get, local: true do |f| %>
-        <%= f.text_field :location, :size=>"50", placeholder: "住所や場所名を入力してください。(例：東京タワー)" %>
-        から半径<%= f.select :distance, *[1..30] %>km以内
-        優先順位：<%= f.select :sort, ["評価が良い", "価格が安い"] %>を優先
-        <%= f.submit '検索' %>
+        <%= f.text_field :keyword, placeholder: "キーワードを入力(任意)", class:"mb-2" %>を含む
+        <br>
+        <%= f.text_field :location, :size=>"50", placeholder: "住所や場所名を入力してください。(例：東京タワー)" %>から
+        <br>
+        <button id="get_current_shop" type="button" class="btn-sm btn-secondary mt-2 mb-2">現在地取得ボタン</button>
+        <br>
+        <%= f.number_field :distance, min: 1, max: 100, class:"mb-2" %>km以内
+        <br>
+        <%= f.select :sort, ["評価が良い", "価格が安い"] %>を優先で
+        <%= f.submit '検索', class: 'btn-sm btn-secondary' %>
       <% end %>
-      <button id="get_current_shop" type="button" class="button">現在地取得</button>
       <%= javascript_include_tag 'user/searches.js' %>
     </div>
   </div>
