--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -6,7 +6,7 @@
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <div class="form-group">
           <%= f.label "お住まいの地域" %>
-          <%= f.select :current_prefectures, User.prefectures.keys, {} %>
+          <%= f.select :current_prefectures, User.prefectures.keys, {}, class: "form-control" %>
         </div>
        <div class="form-group">
           <%= f.label "ニックネーム" %>
