--- a/app/views/user/reviews/index.html.erb
+++ b/app/views/user/reviews/index.html.erb
@@ -1,24 +1,79 @@
-<div class="col-4">
-  <div class="review">
-    <div class="card-header">
-      <%= @shop.name %>
-    </div>
-      <div class="average-score">
-        <div class="star-rating">
-          <div class="star-rating-front" style="width: <%= @shop.review_score_percentage %>%">★★★★★</div>
-          <div class="star-rating-back">★★★★★</div>
+<div class="container">
+  <div class="row">
+    <div class="col-8 mx-auto">
+      <div class="review">
+        <div class="card-header">
+          <%= @shop.name %>
         </div>
-        <div class="average-score-display ml-3 pt-2">
-          <%= @shop.avg_score %>点（<%= @shop.reviews.count %>件のレビュー）
+          <div class="average-score">
+            <div class="star-rating">
+              <div class="star-rating-front" style="width: <%= @shop.review_score_percentage %>%">★★★★★</div>
+              <div class="star-rating-back">★★★★★</div>
+            </div>
+            <div class="average-score-display ml-3 pt-2">
+              <%= @shop.avg_score %>点（<%= @shop.reviews.count %>件のレビュー）
+            </div>
+          </div>
+        <div class="card-footer">
+          <%= link_to '詳細に戻る', shop_path(@shop), class: "button mr-3" %>
+          <%= link_to 'レビューを書く', shop_path(@shop), class: "ml-3 js-modal-open" %>
         </div>
       </div>
-    <div class="card-footer">
-      <%= link_to shop_reviews_path(@shop), class: "button mr-3" do %>
-        レビューを見る
-      <% end %>
-      <%= link_to shop_path(@shop), class: "button ml-3" do %>
-        レビューを書く
-      <% end %>
     </div>
   </div>
 </div>
+        <!--モーダルウィンドウ-->
+        <div class="modal js-modal">
+          <div class="modal__bg">
+            <div class="modal__content">
+              <button class="js-modal-close close-button">×</button>
+              <div class="rating-box mt-3">
+                <%= form_with model: @review, url: shop_reviews_path(@shop), local: true do |f| %>
+                  <div class="main-rating">
+                    <div class="ratings mb-3" id="ratings">
+                      <span class="fa fa-star-o" id="star"></span>
+                      <span class="fa fa-star-o" id="star"></span>
+                      <span class="fa fa-star-o" id="star"></span>
+                      <span class="fa fa-star-o" id="star"></span>
+                      <span class="fa fa-star-o" id="star"></span>
+                    </div>
+                    <div class="ml-3 rating-value-display"><span id="rating-value-display">0</span>/5</div>
+                  </div>
+                  <%= f.hidden_field :score, id: "rating-value" %>
+                  <%= f.text_area :content, class: "textarea form-control", placeholder: "コメントを書いてください。"%>
+                  <%= f.submit "投稿", class: "button mt-3" %>
+                <% end %>
+              </div>
+            </div>
+          </div>
+        </div>
+        <%= javascript_include_tag 'user/reviews.js' %>
+
+
+
+      <div class="row">
+        <div class="col-5 mx-auto mt-3">
+          <% @reviews.each do |review| %>
+            <div class="review mt-3">
+              <div class="card-header">
+                <%= link_to user_path(review.user) do %>
+                  <%= attachment_image_tag(review.user, :icon_image, size: '40x40', fallback: "no-image.png", class:"rounded-circle border") %>
+                <% end %>
+                ユーザーネーム：<%= review.user.nickname %>
+              </div>
+                <div class="average-score">
+                  <div class="star-rating">
+                    <div class="star-rating-front" style="width: <%= review.score * 20 %>%">★★★★★</div>
+                    <div class="star-rating-back">★★★★★</div>
+                  </div>
+                <div class="average-score-display ml-3 pt-2">
+                  <%= review.score.to_i %>点
+                </div>
+                </div>
+              <div class="card-footer">
+                コメント：<br><%= review.content %>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
