--- a/app/views/user/searches/search.html.erb
+++ b/app/views/user/searches/search.html.erb
@@ -1,9 +1,32 @@
-<div class="flex flex-wrap justify-between mx-auto">
-    <% if @shops.any? %>
-      <% @shops.each do |shop| %>
-        <%= link_to shop.name, shop_path(shop) %>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto mt-3">
+      <% if @shops.any? %>
+      <h2>検索結果：<%= @shops.count %>件</h2>
+        <table class="table text-white">
+          <th>店舗名</th>
+          <th>評価</th>
+          <th></th>
+          <% @shops.each do |shop| %>
+            <tr>
+              <td><%= link_to shop.name, shop_path(shop) %></td>
+              <% if shop.avg_score == 0 %>
+                <td>未評価</td>
+              <% else %>
+                <td><%= shop.avg_score %>点</td>
+              <% end %>
+              <td>
+                <% shop.images.first(1).each do |image| %>
+                  <%= attachment_image_tag(image, :food_image, size: '200x200', class:"ml-2 mt-2 pb-2") %>
+                  <%= attachment_image_tag(image, :shop_image, size: '200x200', class:"ml-2 mt-2 pb-2") %>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        </table>
+      <% else %>
+        <p class="mx-auto">検索結果は見つかりませんでした。</p>
       <% end %>
-    <% else %>
-      <p class="mx-auto">検索結果は見つかりませんでした。</p>
-    <% end %>
- </div>
+    </div>
+  </div>
+</div>
