--- a/app/views/user/shops/index.html.erb
+++ b/app/views/user/shops/index.html.erb
@@ -1,15 +1,27 @@
 <div class="container">
   <div class="row">
-    <div class="mx-auto">
-      <% @shops.each do |shop| %>
-        <% shop.images.first(1).each do |image| %>
-          <div class="shop-image">
-            <%= link_to shop.name, shop_path(shop) %>
-            <%= attachment_image_tag(image, :food_image, size: '200x200') %>
-            <%= attachment_image_tag(image, :shop_image, size: '200x200') %>
-          </div>
+    <div class="mx-auto mt-3">
+      <table class="table text-white">
+        <th>店舗名</th>
+        <th>評価</th>
+        <th></th>
+        <% @shops.each do |shop| %>
+          <tr>
+            <td><%= link_to shop.name, shop_path(shop) %></td>
+            <% if shop.avg_score == 0 %>
+              <td>未評価</td>
+            <% else %>
+              <td><%= shop.avg_score %>点</td>
+            <% end %>
+            <td>
+              <% shop.images.first(1).each do |image| %>
+                <%= attachment_image_tag(image, :food_image, size: '200x200', class:"ml-2 mt-2 pb-2") %>
+                <%= attachment_image_tag(image, :shop_image, size: '200x200', class:"ml-2 mt-2 pb-2") %>
+              <% end %>
+            </td>
+          </tr>
         <% end %>
-      <% end %>
+      </table>
     </div>
   </div>
 </div>
