--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -4,6 +4,10 @@
       <h2>ユーザー情報編集</h2>
       <%= form_with model: @user, url: user_path(@user), local: true do |f| %>
         <div class="form-group">
+          <%= f.label "お住まいの地域" %>
+          <%= f.select :current_prefectures, User.prefectures.keys, {}, class: "form-control" %>
+        </div>
+        <div class="form-group">
           <%= f.label "ニックネーム" %>
           <%= f.text_field :nickname, class: "form-control" %>
         </div>
