--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,15 +1,14 @@
 <div class="container">
   <div class="row">
-    <div class="background-image mt-5">
-      <%= attachment_image_tag(@user, :background_image, size: '550x300', fallback: "no-image-back.png") %>
-      <div class="icon-image text-center">
-        <%= attachment_image_tag(@user, :icon_image, size: '100x100', fallback: "no-image.png", class:"rounded-circle border") %>
-        <br><%= @user.nickname %>
-        <br><%= @user.introduction %>
+    <div class="col-7 mx-auto">
+      <div class="background-image mt-5">
+        <%= attachment_image_tag(@user, :background_image, size: '550x300', fallback: "no-image-back.png") %>
+        <div class="icon-image text-center">
+          <%= attachment_image_tag(@user, :icon_image, size: '100x100', fallback: "no-image.png", class:"rounded-circle border") %>
+          <br><%= @user.nickname %>
+          <br><%= @user.introduction %>
+        </div>
       </div>
-    </div>
-    <div >
-      <%= link_to "編集する", edit_user_path(current_user) %>
     </div>
   </div>
 </div>
@@ -28,4 +27,4 @@
   <% end %>
 <% end %>
 
-<%= @user.favorites.count %>件のいいね
+<% @user.favorites.count %>件のいいね
