--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,19 +1,33 @@
 <div class="container">
-  <div class="row">
+  <div class="row search_form">
+    <div class="search-form col-8 mt-5 mx-auto">
+      <h3 class="search-title">簡単検索</h3>
+      <%= form_with url: shops_path, method: :get, local: true do |f| %>
+        <% if user_signed_in? %>
+          <%= f.select :option, ["#{current_user.current_prefectures}のおすすめ", "フォローユーザーのおすすめ", "フォローユーザーの投稿店舗"] %>
+        <% else %>
+          <%= f.select :option, User.prefectures.keys, {} %>のおすすめ
+        <% end %>
+        <%= f.submit '検索', class: 'btn-sm btn-secondary' %>
+      <% end %>
+    </div>
+  </div>
+  <div class="row search_form">
     <div class="col-8 mt-5 mx-auto">
+      <h3 class="search-title">詳細検索</h3>
       <%= form_with url: search_path, method: :get, local: true do |f| %>
-        <%= f.text_field :keyword, placeholder: "キーワードを入力(任意)", class:"mb-2" %>を含む
+        <%= f.text_field :keyword, placeholder: "キーワードを入力", class:"mb-2" %>を含む(入力は任意)
         <br>
         <%= f.text_field :location, :size=>"50", placeholder: "住所や場所名を入力してください。(例：東京タワー)" %>から
         <br>
-        <button id="get_current_shop" type="button" class="btn-sm btn-secondary mt-2 mb-2">現在地取得ボタン</button>
+        <button id="get_current_shop" type="button" class="btn-sm btn-secondary mt-2 mb-2">現在地取得ボタン</button>←(現在地が入力されます)
         <br>
-        <%= f.number_field :distance, min: 1, max: 100, class:"mb-2" %>km以内
+        <%= f.number_field :distance, min: 1, max: 100, class:"mb-2" %>km以内(上限100km)
         <br>
-        <%= f.select :sort, ["評価が良い", "価格が安い"] %>を優先で
+        <%= f.select :sort, ["評価が良い", "価格が安い"] %>を優先
         <%= f.submit '検索', class: 'btn-sm btn-secondary' %>
       <% end %>
-      <%= javascript_include_tag 'user/searches.js' %>
     </div>
   </div>
 </div>
+<%= javascript_include_tag 'user/searches.js' %>
