--- a/app/views/user/searches/search.html.erb
+++ b/app/views/user/searches/search.html.erb
@@ -2,31 +2,12 @@
   <div class="row">
     <div class="mx-auto mt-3">
       <% if @shops.any? %>
-      <h2>検索結果：<%= @shops.count %>件</h2>
-        <table class="table text-white">
-          <th>店舗名</th>
-          <th>評価</th>
-          <th></th>
-          <% @shops.each do |shop| %>
-            <tr>
-              <td><%= link_to shop.name, shop_path(shop) %></td>
-              <% if shop.avg_score == 0 %>
-                <td>未評価</td>
-              <% else %>
-                <td><%= shop.avg_score %>点</td>
-              <% end %>
-              <td>
-                <% shop.images.first(1).each do |image| %>
-                  <%= attachment_image_tag(image, :food_image, size: '200x200', class:"ml-2 mt-2 pb-2") %>
-                  <%= attachment_image_tag(image, :shop_image, size: '200x200', class:"ml-2 mt-2 pb-2") %>
-                <% end %>
-              </td>
-            </tr>
-          <% end %>
-        </table>
+      <h2 class="search-title">検索結果：<%= @shops_all %>件</h2>
+      <%= render "user/shops/shop", shops: @shops %>
       <% else %>
         <p class="mx-auto">検索結果は見つかりませんでした。</p>
       <% end %>
     </div>
   </div>
+  <%= paginate @shops, theme: 'twitter-bootstrap-4' %>
 </div>
