--- a/app/views/user/shops/index.html.erb
+++ b/app/views/user/shops/index.html.erb
@@ -1,27 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="mx-auto mt-3">
-      <table class="table text-white">
-        <th>店舗名</th>
-        <th>評価</th>
-        <th></th>
-        <% @shops.each do |shop| %>
-          <tr>
-            <td><%= link_to shop.name, shop_path(shop) %></td>
-            <% if shop.avg_score == 0 %>
-              <td>未評価</td>
-            <% else %>
-              <td><%= shop.avg_score %>点</td>
-            <% end %>
-            <td>
-              <% shop.images.first(1).each do |image| %>
-                <%= attachment_image_tag(image, :food_image, size: '200x200', class:"ml-2 mt-2 pb-2") %>
-                <%= attachment_image_tag(image, :shop_image, size: '200x200', class:"ml-2 mt-2 pb-2") %>
-              <% end %>
-            </td>
-          </tr>
-        <% end %>
-      </table>
+      <h2 class="search-title"><%= @shops_title %></h2>
+      <%= render "user/shops/shop", shops: @shops %>
     </div>
   </div>
+  <%= paginate @shops, theme: 'twitter-bootstrap-4' %>
 </div>
