--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <div class='row'>
     <div class="mx-auto mt-5">
-      <h2>ユーザー情報編集</h2>
+      <h2 class="title">ユーザー情報編集</h2>
       <%= form_with model: @user, url: user_path(@user), local: true do |f| %>
         <div class="form-group">
           <%= f.label "お住まいの地域" %>
