--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,30 +1,61 @@
 <div class="container">
+  <h2 class="title text-center">プロフィール</h2>
   <div class="row">
-    <div class="col-7 mx-auto">
+    <div class="col-3 mt-5 text">
+      <% if @user.introduction.present? %>
+        <br><p class="text-center h4">紹介文</p>
+        <br><p><%= @user.introduction %></p>
+      <% end %>
+    </div>
+    <div class="col-7 mb-5">
       <div class="background-image mt-5">
         <%= attachment_image_tag(@user, :background_image, size: '550x300', fallback: "no-image-back.png") %>
-        <div class="icon-image text-center">
+        <div class="icon-image">
           <%= attachment_image_tag(@user, :icon_image, size: '100x100', fallback: "no-image.png", class:"rounded-circle border") %>
-          <br><%= @user.nickname %>
-          <br><%= @user.introduction %>
+          <br><p class="text-center"><%= @user.nickname %></p>
         </div>
       </div>
+      <% if @user == current_user %>
+        <p class="mt-2 h4"><%= link_to "編集する", edit_user_path(@user) %></p>
+      <% end %>
+      <% unless @user == current_user %>
+        <% if @user.is_followed_by?(current_user) %>
+          <%= link_to "フォロー外す", user_relationships_path(@user), method: :delete, class:"btn btn-secondary mt-2" %>
+        <% else %>
+          <%= link_to "フォローする", user_relationships_path(@user), method: :post, class:"btn btn-secondary mt-2" %>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-5 mx-auto mt-5">
+      <table class="table sm">
+        <tr>
+          <td>フォロー　：</td>
+          <td><%= @user.followings.count %>人</td>
+          <td><%= link_to "詳細", followings_user_path(@user) %> </td>
+        </tr>
+        <tr>
+          <td>フォロワー：</td>
+          <td><%= @user.followeds.count %>人</td>
+          <td><%= link_to "詳細", followeds_user_path(@user) %></td>
+        </tr>
+        <tr>
+          <td>お気に入り：</td>
+          <td><%= @user.favorites.count %>件</td>
+          <td><%= link_to "詳細", favorites_user_path(@user) %></td>
+        </tr>
+        <tr>
+          <td>評価数　　：</td>
+          <td><%= @user.reviews.count %>件</td>
+          <td><%= link_to "詳細", reviews_user_path(@user) %></td>
+        </tr>
+        <tr>
+          <td>登録店舗数：</td>
+          <td><%= @user.shops.count %>件</td>
+          <td><%= link_to "詳細", shops_user_path(@user) %></td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
-
-<%= @user.followeds.count %>
-<%= @user.followings.count %>
-<% unless @user == current_user %>
-  <% if @user.is_followed_by?(current_user) %>
-    <%= link_to user_relationships_path(@user), method: :delete do %>
-      <button class="btn btn-info">フォロー外す</button>
-    <% end %>
-  <% else %>
-    <%= link_to user_relationships_path(@user), method: :post do %>
-      <button class="btn btn-success">フォローする</button>
-    <% end%>
-  <% end %>
-<% end %>
-
-<% @user.favorites.count %>件のいいね
