--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -4,7 +4,7 @@
       <h3 class="search-title">簡単検索</h3>
       <%= form_with url: shops_path, method: :get, local: true do |f| %>
         <% if user_signed_in? %>
-          <%= f.select :option, ["#{current_user.current_prefectures}のおすすめ", "フォローユーザーのおすすめ", "フォローユーザーの投稿店舗"] %>
+          <%= f.select :option, ["#{current_user.current_prefectures}のおすすめ順", "フォローユーザーの高評価店舗", "フォローユーザーの登録店舗"] %>
         <% else %>
           <%= f.select :option, User.prefectures.keys, {} %>のおすすめ
         <% end %>
