--- a/app/views/user/shops/index.html.erb
+++ b/app/views/user/shops/index.html.erb
@@ -1,8 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="mx-auto mt-3">
-      <h2 class="search-title"><%= @shops_title %></h2>
-      <%= render "user/shops/shop", shops: @shops %>
+      <% if @shops.any? %>
+        <h2 class="search-title"><%= @shops_title %></h2>
+        <%= render "user/shops/shop", shops: @shops %>
+      <% else %>
+        <p class="mx-auto">検索結果は見つかりませんでした。</p>
+      <% end %>
     </div>
   </div>
   <%= paginate @shops, theme: 'twitter-bootstrap-4' %>
