--- a/app/views/user/shops/show.html.erb
+++ b/app/views/user/shops/show.html.erb
@@ -1,9 +1,11 @@
 <div class='container'>
   <div class='row mx-auto'>
     <p class="h5">投稿ユーザー名：<%= link_to @shop.user.nickname, user_path(@shop.user.id) %></p>
-    <div id="favorite_buttons_<%= @shop.id %>">
-      <%= render "user/favorites/favorite", shop: @shop %>
-    </div>
+    <% if user_signed_in? %>
+      <div id="favorite_buttons_<%= @shop.id %>">
+        <%= render "user/favorites/favorite", shop: @shop %>
+      </div>
+    <% end %>
     <div class="shop-info col-12 mt-5">
       <div class="description">
         <div class="detail form-group">
