--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="title text-center">プロフィール</h2>
+  <h2 class="title text-center"><%= @user.nickname %>さんのプロフィール</h2>
   <div class="row">
     <div class="col-3 mt-5 text">
       <% if @user.introduction.present? %>
