レイアウト修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,5 +40,10 @@
       </nav>
     </header>
     <%= yield %>
+    <footer>
+      <div class="mt-3 text-center text-white">
+      <p>© Copyright 2021 <em>Quickrant</em> All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
