--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,8 @@
 
  // 全体
  body {
+  width: 100%;
+  height: 100%;
   min-height: 100vh;
   color: #333333;
   background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%);
