--- a/app/views/user/reviews/_form.html.erb
+++ b/app/views/user/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="col-4">
+<div class="col-7">
   <div class="review">
     <div class="card-header">
       <%= @shop.name %>
@@ -18,6 +18,7 @@
     </div>
   </div>
 </div>
+<!--モーダルウィンドウ-->
 <div class="modal js-modal">
   <div class="modal__bg">
     <div class="modal__content">
