--- a/app/views/user/reviews/index.html.erb
+++ b/app/views/user/reviews/index.html.erb
@@ -27,7 +27,7 @@
         <div class="review mt-3">
           <div class="card-header">
             <%= link_to user_path(review.user) do %>
-              <%= attachment_image_tag(review.user, :icon_image, size: '40x40', fallback: "no-image.png", class:"rounded-circle border") %>
+              <%= attachment_image_tag(review.user, :icon_image, width: "10%", fallback: "no-image.png", class:"rounded-circle border") %>
             <% end %>
             ユーザーネーム：<%= review.user.nickname %>
           </div>
