--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@
 }
 
  // 全体
- body {
+body {
   max-width: 100%;
   height: auto;
   min-height: 100vh;
@@ -59,15 +59,22 @@
   // マイページ
 }
 .background-image {
+  justify-content: center;
+  height: auto;
+  width: 90%;
   position: relative;
-  height: 20rem;
 }
 .icon-image {
   position: absolute;
-  top: 73%;
-  left: 33%;
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  top: 95%;
+  left: 44%;
   color: black;
 }
+
 
 // お店
 .shop-info {
@@ -79,22 +86,29 @@
 }
 
 .shop-image {
-  width: 100%;
-  height: 40vh;
+  max-width: 80%;
+  height: auto;
 }
 .shop-image-all {
  width: 30%;
  height: 30vh;
 }
+.shop-image-index {
+ width: 40%;
+ height: auto;
+}
 .text {
   width: 40%;
   word-break: break-all;
 }
-
 // 地図
+.map-wrap {
+
+}
+
 #map {
+  max-width: 100%;
   height: 50vh;
-  width: 50%;
   color:black
 }
  // レビュー部分
@@ -147,7 +161,7 @@
   height: 100vh;
   position: fixed;
   top: 0;
-  width: 100%;
+  max-width: 100%;
 }
 
 .modal__bg {
@@ -163,10 +177,21 @@
   position: absolute;
   top: 50%;
   transform: translate(-50%,-50%);
-  width: 35%;
 }
 .close-button {
   position: absolute;
   right: 1rem;
   top: 1rem;
+}
+
+@media screen and (max-width: 575px) {
+  .modal__content {
+    width: 80%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .icon-image {
+    width: 9rem;
+    height: 9rem;
+  }
 }
