--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,32 +1,30 @@
 <div class="container">
   <h2 class="title text-center"><%= @user.nickname %>さんのプロフィール</h2>
   <div class="row">
-    <div class="col-3 mt-5 text">
-      <% if @user.introduction.present? %>
-        <br><p class="text-center h4">紹介文</p>
-        <br><p><%= @user.introduction %></p>
-      <% end %>
-    </div>
-    <div class="col-8 mb-5">
-      <div class="mt-5">
-        <%= attachment_image_tag(@user, :background_image, width: "80%", fallback: "no-image-back.png", class:"background-image") %>
-        <br>
-        <%= attachment_image_tag(@user, :icon_image, width: "15%", fallback: "no-image.png", class:"icon-image rounded-circle border") %>
+    <% if @user.introduction.present? %>
+      <div class="col-3 mt-5 text">
+        <p><%= @user.introduction %></p>
       </div>
+    <% end %>
+    <div class="col-9 mb-5 mt-5 mx-auto">
+      <%= attachment_image_tag(@user, :background_image, width: "90%", fallback: "no-image-back.png", class:"background-image") %>
+      <%= attachment_image_tag(@user, :icon_image, fallback: "no-image.png", class:"icon-image") %>
+    </div>
+    <div class="col-12 mt-5" >
       <% if @user == current_user %>
-        <p class="mt-2 h4"><%= link_to "編集する", edit_user_path(@user) %></p>
+        <p class="text-center h5"><%= link_to "編集する", edit_user_path(@user) %></p>
       <% end %>
       <% unless @user == current_user %>
         <% if @user.is_followed_by?(current_user) %>
-          <%= link_to "フォロー外す", user_relationships_path(@user), method: :delete, class:"btn btn-secondary mt-2" %>
+          <%= link_to "フォロー外す", user_relationships_path(@user), method: :delete, class:"btn btn-secondary mt-2 ml-5" %>
         <% else %>
-          <%= link_to "フォローする", user_relationships_path(@user), method: :post, class:"btn btn-secondary mt-2" %>
+          <%= link_to "フォローする", user_relationships_path(@user), method: :post, class:"btn btn-secondary mt-2 ml-5" %>
         <% end %>
       <% end %>
     </div>
   </div>
   <div class="row">
-    <div class="col-5 mx-auto mt-5">
+    <div class="col-lg-5 col-md-7 col-sm-9 mx-auto mt-5">
       <table class="table sm">
         <tr>
           <td>フォロー　：</td>
